[package]
name = "iris-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "iris"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.8"
iris = { git = "https://github.com/pchan37/iris", version = "0.1.0", features = ["clap"] }
snafu = "0.8.3"
